// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooActionSheetComponent Snapshots Should render a heading 1`] = `
<yoo-action-sheet
  class="hydrated"
  data-yoo-action-sheet-host=""
  heading="Action Sheet"
>
  
  <yoo-modal
    class="action-sheet"
    data-yoo-action-sheet=""
    has-header="false"
  >
    <div
      attr-layout="column"
      data-yoo-action-sheet=""
    >
      <div
        class="outer-container"
        data-yoo-action-sheet=""
      >
        <div
          attr-layout="column"
          class="top-container"
          data-yoo-action-sheet=""
        >
          <div
            class="heading-container"
            data-yoo-action-sheet=""
          >
            Action Sheet
          </div>
        </div>
        <div
          class="bottom-container"
          data-yoo-action-sheet=""
        >
          <div
            class="cancel-container"
            data-yoo-action-sheet=""
          >
            Cancel
          </div>
        </div>
      </div>
    </div>
  </yoo-modal>
</yoo-action-sheet>
`;

exports[`YooActionSheetComponent Snapshots Should render a heading and action buttons 1`] = `
<yoo-action-sheet
  class="hydrated"
  data-yoo-action-sheet-host=""
  heading="Action Sheet"
>
  
  <yoo-modal
    class="action-sheet"
    data-yoo-action-sheet=""
    has-header="false"
  >
    <div
      attr-layout="column"
      data-yoo-action-sheet=""
    >
      <div
        class="outer-container"
        data-yoo-action-sheet=""
      >
        <div
          attr-layout="column"
          class="top-container"
          data-yoo-action-sheet=""
        >
          <div
            class="heading-container"
            data-yoo-action-sheet=""
          >
            Action Sheet
          </div>
          <div
            class="inner-container"
            data-yoo-action-sheet=""
          >
            Action 1
            <i
              class="yo-fire"
              data-yoo-action-sheet=""
            />
          </div>
          <div
            class="inner-container"
            data-yoo-action-sheet=""
          >
            Action 2
            <i
              class="yo-fire"
              data-yoo-action-sheet=""
            />
          </div>
        </div>
        <div
          class="bottom-container"
          data-yoo-action-sheet=""
        >
          <div
            class="cancel-container"
            data-yoo-action-sheet=""
          >
            Cancel
          </div>
        </div>
      </div>
    </div>
  </yoo-modal>
</yoo-action-sheet>
`;

exports[`YooActionSheetComponent Snapshots Should render a heading and an action button 1`] = `
<yoo-action-sheet
  class="hydrated"
  data-yoo-action-sheet-host=""
  heading="Action Sheet"
>
  
  <yoo-modal
    class="action-sheet"
    data-yoo-action-sheet=""
    has-header="false"
  >
    <div
      attr-layout="column"
      data-yoo-action-sheet=""
    >
      <div
        class="outer-container"
        data-yoo-action-sheet=""
      >
        <div
          attr-layout="column"
          class="top-container"
          data-yoo-action-sheet=""
        >
          <div
            class="heading-container"
            data-yoo-action-sheet=""
          >
            Action Sheet
          </div>
        </div>
        <div
          class="bottom-container"
          data-yoo-action-sheet=""
        >
          <div
            class="cancel-container"
            data-yoo-action-sheet=""
          >
            Cancel
          </div>
        </div>
      </div>
    </div>
  </yoo-modal>
</yoo-action-sheet>
`;

exports[`YooActionSheetComponent Snapshots Should render an empty action sheet 1`] = `
<yoo-action-sheet
  class="hydrated"
  data-yoo-action-sheet-host=""
>
  
  <yoo-modal
    class="action-sheet"
    data-yoo-action-sheet=""
    has-header="false"
  >
    <div
      attr-layout="column"
      data-yoo-action-sheet=""
    >
      <div
        class="outer-container"
        data-yoo-action-sheet=""
      >
        <div
          attr-layout="column"
          class="top-container"
          data-yoo-action-sheet=""
        >
          <div
            class="heading-container"
            data-yoo-action-sheet=""
          >
            
          </div>
        </div>
        <div
          class="bottom-container"
          data-yoo-action-sheet=""
        >
          <div
            class="cancel-container"
            data-yoo-action-sheet=""
          >
            Cancel
          </div>
        </div>
      </div>
    </div>
  </yoo-modal>
</yoo-action-sheet>
`;

exports[`YooActionSheetComponent Snapshots should not close action sheet on disabled button 1`] = `
<yoo-action-sheet
  class="hydrated"
  data-yoo-action-sheet-host=""
  heading="Action Sheet"
>
  
  <yoo-modal
    class="action-sheet"
    data-yoo-action-sheet=""
    has-header="false"
  >
    <div
      attr-layout="column"
      data-yoo-action-sheet=""
    >
      <div
        class="outer-container"
        data-yoo-action-sheet=""
      >
        <div
          attr-layout="column"
          class="top-container"
          data-yoo-action-sheet=""
        >
          <div
            class="heading-container"
            data-yoo-action-sheet=""
          >
            Action Sheet
          </div>
          <div
            class="inner-container"
            data-yoo-action-sheet=""
          >
            Action 1
            <i
              class="yo-fire"
              data-yoo-action-sheet=""
            />
          </div>
        </div>
        <div
          class="bottom-container"
          data-yoo-action-sheet=""
        >
          <div
            class="cancel-container"
            data-yoo-action-sheet=""
          >
            Cancel
          </div>
        </div>
      </div>
    </div>
  </yoo-modal>
</yoo-action-sheet>
`;
